--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/slider": "^0.15.0",
+    "@shwilliam/react-rubber-slider": "^0.1.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.0",
+    "d3": "^6.7.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-range-slider": "^2.0.2",
+    "react-card-flip": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-flippy": "^1.1.0",
+    "react-query": "^3.15.2",
+    "react-rangeslider": "^2.2.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
+    "react-spotify-player": "^1.0.4",
+    "react-text-transition": "^1.3.0",
+    "react-wavify": "^1.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
